template.yml.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Deploy Kubernetes Cluster with 1 Master Node and 1 Worker Node

Parameters:
  InstanceType:
    Description: EC2 Instance Type
    Type: String
    Default: t3.medium
    AllowedValues:
      - t2.micro
      - t3.medium
      - t3.large
  ImageAMIId:
    Description: AMI ID for the EC2 Instances
    Type: String
    Default: ami-0f30a9c3a48f3fa79
  VolumeSizeEC2:
    Description: Size of the EBS Volume (in GiB)
    Type: Number
    Default: 20
    MinValue: 8

Resources:
  MasterNodeKubernetesSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: SecurityGroup for Kubernetes Cluster - Master Node
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          Description: "SSH to EC2 Instances"
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: "Kubernetes API server"
          FromPort: 6443
          IpProtocol: tcp
          ToPort: 6443
        - CidrIp: 0.0.0.0/0
          Description: "etcd server client API"
          FromPort: 2379
          IpProtocol: tcp
          ToPort: 2380
        - CidrIp: 0.0.0.0/0
          Description: "kubelet API"
          FromPort: 10250
          IpProtocol: tcp
          ToPort: 10250
        - CidrIp: 0.0.0.0/0
          Description: "kube-scheduler"
          FromPort: 10251
          IpProtocol: tcp
          ToPort: 10251
        - CidrIp: 0.0.0.0/0
          Description: "kube-controller-manager"
          FromPort: 10252
          IpProtocol: tcp
          ToPort: 10252
      Tags: 
        - Key: Name
          Value: Kuberentes SG Master Node

  WorkerNodeKubernetesSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: SecurityGroup for Kubernetes Cluster - Worker Node
      SecurityGroupIngress: 
        - CidrIp: 0.0.0.0/0
          Description: "SSH to EC2 Instances"
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: "kubelet API"
          FromPort: 10250
          IpProtocol: tcp
          ToPort: 10250
        - CidrIp: 0.0.0.0/0
          Description: "NodePort Services"
          FromPort: 30000
          IpProtocol: tcp
          ToPort: 32767
      Tags: 
        - Key: Name
          Value: Kuberentes SG Worker Node

  WorkerNode:
    DependsOn: WorkerNodeKubernetesSG
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !Ref ImageAMIId
      InstanceInitiatedShutdownBehavior: terminate
      InstanceType: !Ref InstanceType
      KeyName: Ant
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            cd /home/ubuntu
            echo pwd
            sudo -u ubuntu git clone https://github.com/Naz513/kubernetes-ubuntu.git
            cd kubernetes-ubuntu/
            sudo -u ubuntu chmod +x install_components.sh
      SecurityGroupIds:
        - !Ref WorkerNodeKubernetesSG
      Tags: 
        - Key: Name
          Value: WorkerNode
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !Ref VolumeSizeEC2
            VolumeType: gp2
            DeleteOnTermination: true

  MasterNode:
    DependsOn: MasterNodeKubernetesSG
    Type: AWS::EC2::Instance
    Properties: 
      ImageId: !Ref ImageAMIId
      InstanceInitiatedShutdownBehavior: terminate
      InstanceType: !Ref InstanceType
      KeyName: Ant
      UserData:
        Fn::Base64: !Sub |
            #!/bin/bash -xe
            cd /home/ubuntu
            echo pwd
            sudo -u ubuntu git clone https://github.com/Naz513/kubernetes-ubuntu.git
            cd kubernetes-ubuntu/
            sudo -u ubuntu chmod +x install_components.sh kube_init.sh kubernetes_dashboard.sh
      SecurityGroupIds:
        - !Ref MasterNodeKubernetesSG
      Tags: 
        - Key: Name
          Value: MasterNode
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: !Ref VolumeSizeEC2
            VolumeType: gp2
            DeleteOnTermination: true

Outputs:
  MasterNodeIP:
    Description: IP of Master Node
    Value: !GetAtt MasterNode.PublicIp
  MasterNodeConnectSSH:
    Description: SSH into Master Node
    Value: !Sub ssh -i "pc-ssh.pem" ubuntu@${MasterNode.PublicDnsName}
  WorkerNodeIP:
    Description: IP of Worker Node
    Value: !GetAtt WorkerNode.PublicIp
  WorkerNodeConnectSSH:
    Description: SSH into Worker Node
    Value: !Sub ssh -i "pc-ssh.pem" ubuntu@${WorkerNode.PublicDnsName}
